test/code/test_class_notfound_error.php
<?php

ClassNotFound::$hola = 1;

